--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/gndx/js-portfolio#readme",
   "devDependencies": {
+    "stylus": "^0.59.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
