--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production"
+    "build": "node ./scripts/create-env.js &&webpack --mode production",
+    "dev":"webpack --mode development"
   },
   "repository": {
     "type": "git",
