--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gndx/js-portfolio.git"
+    "url": "https://github.com/elladodelbien/jhonnyPORTAFOLIO.git"
   },
   "keywords": [
     "javascript",
